api: add networkDiff to /info response
